# beancount-duckdb

./: .gitignore  README.md  pyproject.toml
beancount_duckdb/: __init__.py  cli.py  loader.py  schema.sql  views.sql
tests/: test_loader.py
